<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nany_.projetoviagem.FotoActivity">

    <Button
        android:id="@+id/btCapturarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="@string/btCapturarFoto"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="capturarFoto" />

    <Button
        android:id="@+id/btSalvarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:text="@string/btSalvarFoto"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/brVisualizarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btCapturarFoto"
        android:layout_marginBottom="32dp"
        android:text="@string/btVisualizarFoto"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="visualizarFoto" />
</RelativeLayout>
