<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gasto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nany_.projetoviagem.GastoActivity">

    <TextView
        android:text="@string/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/tipoTextView" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/tipoSpinner"
        android:layout_below="@+id/tipoTextView"
        android:layout_alignParentStart="true">
        <requestFocus />
    </Spinner>

    <TextView
        android:text="@string/valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipoSpinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/valorTextView2" />

    <TextView
        android:text="@string/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/valorTextView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="118dp"
        android:id="@+id/dataTextView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/valorEditText"
        android:layout_below="@+id/valorTextView2"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/dataEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dataEditText"
        android:layout_alignBaseline="@+id/valorEditText"
        android:layout_alignBottom="@+id/valorEditText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valorEditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/descricaoTextView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/descricaoTextView4"
        android:layout_marginTop="11dp"
        android:id="@+id/descricaoEditText5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/localTextView5"
        android:layout_below="@+id/descricaoEditText5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/localTextView5"
        android:layout_alignParentStart="true"
        android:id="@+id/localEditText6"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/gerarGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:id="@+id/gasteiButton"
        android:onClick="gravarGasto"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
